
[package]
name = "plumedb"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true

anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["plumekv", "volo-gen"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["L_B__"]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "0.9.0"
volo-build = "0.9.5"
volo-grpc = "0.9.3"
pilota = "0.10.0"
snafu = "0.7.5"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
once_cell = "1.18.0"

anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio = "1"
