[package]
name = "plumedb"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
snafu.workspace = true
tracing.workspace = true
tabled.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dashmap.workspace = true
flume.workspace = true
mimalloc-rust.workspace = true
clap.workspace = true
logos.workspace = true
nom.workspace = true
ariadne.workspace = true
reedline.workspace = true
nu-ansi-term.workspace = true
once_cell.workspace = true
colored.workspace = true
futures.workspace = true
tokio-stream = "0.1.15"
crossterm = "0.27.0"
nu-pretty-hex = "0.93.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
lsm-kv = { path = "./lsm-kv" }

[workspace]
members = ["lsm-kv", "volo-gen"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["L_B__"]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "0.9.0"
volo-build = "0.9.5"
volo-grpc = "0.9.3"
pilota = "0.10.0"
snafu = "0.7.5"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
once_cell = "1.18.0"
hashbrown = "0.14.3"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
], default-features = true }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tabled = "0.15.0"
tokio = "1"
tempfile = "3"
uuid = "1.8.0"
dashmap = "5.5.3"
mimalloc-rust = "0.2.1"
clap = { version = "4.5.4", features = ["derive"] }
logos = "0.14.0"
ariadne = "0.4.1"
reedline = "0.32.0"
nom = "7.1.3"
nu-ansi-term = "0.50.0"
colored = "2.1.0"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
