[package]
name = "lsm-kv"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
ouroboros = "0.18"
chrono = "0.4.35"
crc32fast = "1.4.0"
farmhash = "1.1.5"
moka = { version = "0.12.5", features = ["sync"] }
crossbeam-channel = "0.5.12"
# flume = { workspace = true }
snafu = { workspace = true }
anyhow = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tabled = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
once_cell = { workspace = true }
